--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 <h2>{{ site.description | escape }}</h2>
             </section>
             <section class="bot">
-                <a target="_blank" href="https://t.me/dilet_t_bot">@dilet_t_bot</a> - бот для вопросов и предложений, а
+                <a target="_blank" href="https://t.me/Dilettantbot">@Dilettantbot</a> - бот для вопросов и предложений, а
                 также, если хотите присоединиться к команде.
             </section>
             {%- include platforms.html -%}
